tela 3.4 sem responsivdade e com erros que dá pra arrumar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 <!--3.2-->
                 <h2 class="escondido">Crie suas perguntas</h2>
                 <!--3.3-->
-                <h2 class="mudarPosicao">Agora, decida os níveis!</h2>
+                <h2 class="mudarPosicao escondido">Agora, decida os níveis!</h2>
+                <!--tela 3.4-->
+                <h2 class="mudarPosicao">Seu quizz está pronto!</h2>
                 <!--aqui é da tela 3.1-->
                 <div class="MontarQuizz escondido">
                     <input type="text" placeholder="Título do seu quizz">
@@ -57,19 +59,24 @@
                         <input type="text" placeholder="URL da imagem 3">
                     </div>
                 </div>
-                <div class="container_Niveis">
+                <!--tela 3.3-->
+                <div class="container_Niveis escondido">
                     <div class="MontarNiveis">
-                      <h3>Nível 1</h3>
-                      <input class = "distanciar" type="text" placeholder="Título do nível">
-                      <input  class = "distanciar"  type="text" placeholder="% de acerto mínima">
-                      <input class = "distanciar"  type="text" placeholder="URL da imagem do nível">
-                      <form action="" method="post">
-                        <div>
-                            <textarea id="message" name="message" placeholder="Descrição do nível"></textarea>
-                        </div>
-                    </form>
+                        <h3>Nível 1</h3>
+                        <input class="distanciar" type="text" placeholder="Título do nível">
+                        <input class="distanciar" type="text" placeholder="% de acerto mínima">
+                        <input class="distanciar" type="text" placeholder="URL da imagem do nível">
+                        <form action="" method="post">
+                            <div>
+                                <textarea id="message" name="message" placeholder="Descrição do nível"></textarea>
+                            </div>
+                        </form>
                     </div>
-                 </div>
+                </div>
+                <!--tela 3.4 CARD-->
+                <div class="cardDecoration">
+                    <div class="text"><p>O quão Potterhead é você?</p></div>
+                </div>
                 <!--tela 3.2-->
                 <div class="perguntasComIcom escondido">
                     <div class="pergunta1">
@@ -82,7 +89,7 @@
                     </div>
                 </div>
                 <!--tela 3.3-->
-                <div class="niveisComIcon">
+                <div class="niveisComIcon escondido">
                     <div class="pergunta1">
                         <h3>Nível 2</h3>
                         <img class="bloco" src="Vector.png" alt="bloco de escrever" />
@@ -92,16 +99,20 @@
                         <img class="bloco" src="Vector.png" alt="bloco de escrever" />
                     </div>
                 </div>
-               
-              
-                <div class="prosseguirBotao ">
-                      <!--tela 3.1-->
+
+
+                <div class="prosseguirBotao">
+                    <!--tela 3.1-->
                     <p class="escondido">Prosseguir pra criar perguntas</p>
                     <!--essa parte é na tela 3.2-->
                     <p class="escondido">Prosseguir pra criar níveis</p>
                     <!--tela 3.3-->
-                    <p>Finalizar Quizz</p>
+                    <p class="escondido">Finalizar Quizz</p>
+                    <!--tela 3.4-->
+                    <p>Acessar Quizz</p>
                 </div>
+                <!--tela 3.4 -- so aparece nessa tela-->
+                <h4>Voltar pra home</h4>
             </div>
         </main>
     </div>
