tela bÔnus 4 feita (modificar o text no js)

--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
         <main>
             <div class="container">
                 <!--3.1 -->
-                <h2 class="escondido">Comece pelo começo</h2>
+                <h2 class= "" >Comece pelo começo</h2>
                 <!--3.2-->
                 <h2 class="escondido">Crie suas perguntas</h2>
                 <!--3.3-->
                 <h2 class="mudarPosicao escondido">Agora, decida os níveis!</h2>
                 <!--tela 3.4-->
-                <h2 class="mudarPosicao">Seu quizz está pronto!</h2>
+                <h2 class="mudarPosicao escondido">Seu quizz está pronto!</h2>
                 <!--aqui é da tela 3.1-->
-                <div class="MontarQuizz escondido">
+                <div class="MontarQuizz ">
                     <input type="text" placeholder="Título do seu quizz">
-                    <input type="text" placeholder="URL da imagem do seu quizz">
-                    <input type="text" placeholder="Quantidade de perguntas do quizz">
+                    <input class="redBackground" type="text" placeholder="URL da imagem do seu quizz">
+                    <h6>O valor informado não é uma URL válida</h6>
+                    <input  class = "redBackground" type="text" placeholder="Quantidade de perguntas do quizz">
+                    <h6>O quizz deve ter no mínimo 3 perguntas</h6>
                     <input type="text" placeholder="Quantidade de níveis do quizz">
                 </div>
                 <!--tela 3.2-->
@@ -74,7 +76,7 @@
                     </div>
                 </div>
                 <!--tela 3.4 CARD-->
-                <div class="cardDecoration">
+                <div class="cardDecoration escondido">
                     <div class="text"><p>O quão Potterhead é você?</p></div>
                 </div>
                 <!--tela 3.2-->
@@ -101,18 +103,18 @@
                 </div>
 
 
-                <div class="prosseguirBotao">
+                <div class="prosseguirBotao ">
                     <!--tela 3.1-->
-                    <p class="escondido">Prosseguir pra criar perguntas</p>
+                    <p class="">Prosseguir pra criar perguntas</p>
                     <!--essa parte é na tela 3.2-->
                     <p class="escondido">Prosseguir pra criar níveis</p>
                     <!--tela 3.3-->
                     <p class="escondido">Finalizar Quizz</p>
                     <!--tela 3.4-->
-                    <p>Acessar Quizz</p>
+                    <p class="escondido">Acessar Quizz</p>
                 </div>
                 <!--tela 3.4 -- so aparece nessa tela-->
-                <h4>Voltar pra home</h4>
+                <h4 class="escondido">Voltar pra home</h4>
             </div>
         </main>
     </div>
