topo fixo com todas as telas 3 incusive o bonus

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <div class="container">
                 <!--3.1 -->
-                <h2 class="">Comece pelo começo</h2>
+                <h2 class= "" >Comece pelo começo</h2>
                 <!--3.2-->
                 <h2 class="escondido">Crie suas perguntas</h2>
                 <!--3.3-->
@@ -35,7 +35,7 @@
                     <input type="text" placeholder="Título do seu quizz">
                     <input class="redBackground" type="text" placeholder="URL da imagem do seu quizz">
                     <h6>O valor informado não é uma URL válida</h6>
-                    <input class="redBackground" type="text" placeholder="Quantidade de perguntas do quizz">
+                    <input  class = "redBackground" type="text" placeholder="Quantidade de perguntas do quizz">
                     <h6>O quizz deve ter no mínimo 3 perguntas</h6>
                     <input type="text" placeholder="Quantidade de níveis do quizz">
                 </div>
@@ -77,9 +77,7 @@
                 </div>
                 <!--tela 3.4 CARD-->
                 <div class="cardDecoration escondido">
-                    <div class="text">
-                        <p>O quão Potterhead é você?</p>
-                    </div>
+                    <div class="text"><p>O quão Potterhead é você?</p></div>
                 </div>
                 <!--tela 3.2-->
                 <div class="perguntasComIcom escondido">
