outro js funcionando : criação de um quiz 1/4 legalzao

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="prosseguirBotao ">
                     <!--tela 3.1-->
-                    <p  class=""  onclick="ValidarQuizzPerguntas() ">Prosseguir pra criar perguntas</p>
+                    <p  class=""  onclick="ValidarQuizz() ">Prosseguir pra criar perguntas</p>
                     <!--essa parte é na tela 3.2-->
                     <p class="escondido">Prosseguir pra criar níveis</p>
                     <!--tela 3.3-->
