finalizacao do quiz

--- a/indexJoy.html
+++ b/indexJoy.html
@@ -19,7 +19,7 @@
 <body >
     <div class="topo">BuzzQuizz</div>
     <div class="app">
-        <div class="banner">
+        <div class="banner" id="banner">
            <!-- <img src="imagens/hogwarts.png">
             <div class="titulo">voce é???</div> -->
         </div> 
