fiz uma função pra voltar pra pag dos niveis , 50% feita

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="cardDecoration escondido">
                     <div class="text"><p>O quão Potterhead é você?</p></div><!--aqui vai ter que ir pro js pra rodar o da api-->
                 </div>
-                <!--tela 3.2-->
+                <!--tela 3.2 acho que aq precisa de js tbm-->
                 <div class="perguntasComIcom ">
                     <div data-identifier="expand" class="pergunta1">
                         <h3>Pergunta 2</h3>
@@ -92,7 +92,8 @@
                         <img class="notas" src="Vector.png" alt="bloco de escrever" />
                     </div>
                 </div>
-                <!--tela 3.3-->
+                <!--tela 3.3 acho q aq precisa de js -->
+                
                 <div class="niveisComIcon escondido">
                     <div data-identifier="expand" class="pergunta1">
                         <h3>Nível 2</h3>
