tela 3 com js pronto (falta corrigi um bug ou oto , mas pequenos ))

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!--3.1 -->
                 <h2 class= "escondido" >Comece pelo começo</h2>
                 <!--3.2-->
-                <h2 class="">Crie suas perguntas</h2>
+                <h2 class="tchauCriarPerguntas ">Crie suas perguntas</h2>
                 <!--3.3-->
                 <h2 class="mudarPosicao escondido Hdois" >Agora, decida os níveis!</h2>
                 <!--tela 3.4-->
@@ -110,7 +110,7 @@
                     <!--tela 3.1-->
                     <p  class="escondido"  onclick="ValidarQuizz() ">Prosseguir pra criar perguntas</p>
                     <!--essa parte é na tela 3.2-->
-                    <p class="" onclick="textoPerguntaValidar()">Prosseguir pra criar níveis</p>
+                    <p class="tchauPerguntas" onclick="textoPerguntaValidar()">Prosseguir pra criar níveis</p>
                     <!--tela 3.3-->
                     <p class="telaFinal escondido" onclick="TelaDosNiveisValidar()">Finalizar Quizz</p>
                     <!--tela 3.4-->
