tentando resolver o bug de expandir aas perguntas mas nada

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <!--tela 3.2 acho que aq precisa de js tbm-->
                 <div class="perguntasComIcom escondido">
                     <div data-identifier="expand" class="pergunta1">
-                        <h3 onclick="perguntasEXPAND()">Pergunta 2</h3>
-                        <img  class="notas" src="Vector.png" alt="bloco de escrever"  />
+                        <h3 >Pergunta 2</h3>
+                        <img onclick="perguntasEXPAND()" class="notas" src="Vector.png" alt="bloco de escrever"  />
                     </div>
                     <div data-identifier="expand" class="pergunta2">
                         <h3>Pergunta 3</h3>
