mudança no nome do css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--o reset-->
     <link rel="stylesheet" href="reset.css" />
     <!--o style-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.duda.css" />
     <title>BuzzQuizz</title>
 </head>
 
